--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,8 @@
     <title>Saleor</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="<%= htmlWebpackPlugin.options.API_URI %>" />
-    <link rel="preconnect" rel="stylesheet" href="https://indestructibletype.com/fonts/Jost.css" type="text/css" charset="utf-8" />
-
+    <!-- <link rel="preconnect" rel="stylesheet" href="https://indestructibletype.com/fonts/Jost.css" type="text/css" charset="utf-8" /> -->
+    <link rel="preconnect" href="http://fonts.cdnfonts.com/css/simplifica" type="text/css" charset="utf-8" />
     <script>
       if (window.Cypress) {
         window.__REACT_DEVTOOLS_GLOBAL_HOOK__ =
